# az204cert

.github/workflows/: deploy_simpleapi_container_app.yaml  irisapp.yaml  irisapp2.yaml  master_container_simple_api.yml  master_functiontestgs.yml  master_simpleapi_slots.yaml  master_simpleapigs.yml  master_youtubelistener.yml  mlflow_server.yaml
docs/: develop_event_based_solutions.md  develop_solutions_that_use_blob_storage.md  implement_api_management.md  implement_azure_app_service_web_apps.md  resource_groups.md
docs/implement_azure_app_service_web_apps/: explore_azure_app_service.excalidraw
examples/az_storage_account/: README.md  policy.json  storage_utils.py  useful_cli_commands.sh
examples/azfunction_timer/: create_resources.sh  function.py
examples/azfunctions/: clean_up.sh  create_resources.sh
examples/containerized_solutions/: clean_resources.sh  create_resources.sh
examples/containerized_solutions_container_instances/: clean_resources.sh  create_container_app.sh  create_resources.sh
examples/cosmos_db_sol/: clean_up.sh  create_resources.sh  sdk_examples.py
examples/deploy_container_api/: Dockerfile  README.md  clean_resources.sh  create_resources.sh  trigger.txt
examples/deploy_simple_api/: README.md  create_resources.sh  trigger.txt
irisapp/: Dockerfile  clean_up_resources.sh  trigger.txt
irisapp/irisapi/: pyproject.toml
irisapp/irisapi/irisapi/: __init__.py
irisapp/irisapi/irisapi/utils/: dummy.py
irisapp2/: pyproject.toml  trigger.txt
irisapp2/src/iris/: __init__.py
mlflow_server/: Dockerfile  trigger.txt
(+11 files in other folders)
