[project]
name = "iris"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Manuel Gil", email = "manuelgilsitio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
iris = "iris:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
